# dnsrmap

./: CMakeLists.txt  README.md  build.bat
include/: dnsrmap.h
src/: CMakeLists.txt  dnsrmap.cpp
test/: CMakeLists.txt  testdnsrmap.cpp
